Structure handler cleanup (more streams)